# nestix

./: Cargo.toml  LICENSE  README.md
examples/: console.rs
examples/basic_web/: Cargo.toml  index.html  package.json  pnpm-lock.yaml
examples/basic_web/src/: components_archive.rs  lib.rs
examples/basic_web/src/components/: button.rs  flex_view.rs  input.rs  mod.rs  root.rs  text.rs
examples/console/: Cargo.toml
examples/console/src/: main.rs
examples/example-web-app/: Cargo.toml  index.html  package-lock.json  package.json
examples/example-web-app/src/: lib.rs
examples/example-web-app/src/components/: button.rs  div.rs  input.rs  mod.rs  root.rs  text.rs
glui/: Cargo.toml
glui-macros/: Cargo.toml
glui-macros/src/: callback.rs  component.rs  derive_props.rs  layout.rs  util.rs
glui/src/: app_model.rs  callbacks.rs  component.rs  element.rs  lib.rs  props.rs
glui/src/components/: fragment.rs  mod.rs
glui/src/hooks/: context.rs  effect.rs  memo.rs  mod.rs  remember.rs  state.rs
nestix/: Cargo.toml
nestix-macros/: Cargo.toml
nestix-macros/src/: build_props.rs  callback.rs  clone_var.rs  closure.rs  component.rs  derive_props.rs  destructure.rs  layout.rs  lib.rs  prop_value.rs  props.rs  signals.rs  util.rs
nestix-macros/src/layout/: generate.rs  (+2 more)
nestix-signal/: Cargo.toml  README.md
nestix-signal/src/: computed.rs  config.rs  effect.rs  lib.rs  readonly.rs  shared.rs  signal.rs  state.rs  untrack.rs
nestix-signal/tests/: reactivity.rs
nestix/src/: __private.rs  app_model.rs  callbacks.rs  children.rs  component.rs  context.rs  element.rs  layout.rs  lib.rs  model.rs  prop.rs  prop_value.rs  props.rs  shared.rs
nestix/tests/: component_macros.rs  runtime.rs
(+30 files in other folders)
