[package]
name = "basic_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bon = "3.3.2"
log = "0.4.22"
glui = { path = "../../glui" }
wasm-bindgen = "0.2.99"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.76", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventListener",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Window",
    "CssStyleDeclaration",
] }
nanoid-wasm = { version = "0.1.3", features = ["wasm"] }
