[package]
name = "example-web-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.28"
nestix = { path = "../../nestix" }
wasm-bindgen = "0.2.105"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.82", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventListener",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window",
    "CssStyleDeclaration",
]}
